# AdventOfCode

./: .gitmodules  make_day.sh  pyproject.toml  run_day.py
.scripts/: make_day.py  template.py
2023/day01/: day01.py
2023/day02/: day02.py
2023/day03/: day03.py
2023/day04/: day04.py
2023/day05/: day05.py
2023/day06/: day06.py
2023/day07/: day07.py
2023/day08/: day08.py  day08_burte.py
2023/day09/: day09.py
2023/day10/: day10.py  sample.txt
2023/day11/: day11.py
2023/day12/: day12.py
2023/day13/: day13.py
2023/day14/: day14.py
2023/day15/: day15.py
2023/day16/: day16.py
2023/day17/: day17.py
2023/day18/: day18.py
2023/day19/: day19.py
2023/day20/: day20  day20.py  day20_brute.py
2023/day21/: day21.py
2023/day22/: day22.py
2023/day23/: day23.py
2023/day24/: day24.py
2023/day25/: day25.py
common/: setup.py
common/aoc_common/: __init__.py  ansi.py  benchmark.py  collections.py  io.py  plane.py  search.py
