[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = "Advent of Code solutions"
authors = ["mrkirby153 <mr.austinwhyte@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
advent-of-code-data = "^1.3.2"
pytz = "^2022.7"
aoc_common = {path = "./common", develop = true}
tqdm = "^4.66.1"
graphviz = "^0.20.1"
z3-solver = "^4.12.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
